--- a/css/styles.css
+++ b/css/styles.css
@@ -489,6 +489,32 @@ ul.contact-info { margin-bottom: 3.25em; }
 
 @media (min-width: 1024px) {
 
+	/* Typewriter cursor effect */
+.header-name {
+	font-size: 1.85em;
+
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid #534a4a; /* typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  letter-spacing: .15em; /* Adjust as needed */
+  animation:
+    typing 2.3s steps(30, end),
+    blink-caret .5s step-end infinite;
+}
+
+/* The typing effect */
+	@keyframes typing {
+		from { width: 0 } to { width: 20% }
+	}
+
+/* The typewriter cursor effect */
+	@keyframes blink-caret {
+		from, to { border-color: transparent }
+		50% { border-color: #534a4a; } /* orange*/
+	}
+/*******************/
+	
+	
 /* Settings for header container */
   header {
     width: 90%;
